# teach-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
skills/teach-memory/: SKILL.md
src/teach/: __init__.py  cli.py  config.py  database.py
