[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teach-cli"
version = "0.0.1"
description = "A comprehensive teaching assistant CLI platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
teach = "teach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
